--- a/package.json
+++ b/package.json
@@ -4,9 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:tsc": "tsc --watch -p .",
+    "dev:serve": "nodemon -e js -w lib dist/index.js",
+    "dev": "run-p dev:*",
+    "test": "set NODE_ENV=test & mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/jwt": "^3.2.0",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^7.5.2",
+    "mqtt": "^5.0.5",
+    "node-schedule": "^2.1.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.6",
+    "@types/hapi": "^18.0.11",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.6.3",
+    "chai": "^4.3.8",
+    "dotenv": "^16.3.1",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
