--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
     "@hapi/jwt": "^3.2.0",
+    "@prisma/client": "5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "mongoose": "^7.5.2",
@@ -32,6 +33,7 @@
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
+    "prisma": "5.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
