--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-iterahero-smartfarming",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "dev:tsc": "tsc --watch -p .",
