--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev:tsc": "tsc --watch -p .",
-    "dev:serve": "nodemon -e js -w lib dist/index.js",
+    "dev:serve": "nodemon -r dotenv/config -e js -w lib dist/index.js",
     "dev": "run-p dev:*",
     "test": "set NODE_ENV=test & mocha -r ts-node/register test/**/*.test.ts"
   },
