--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mqtt": "^5.0.5",
     "node-schedule": "^2.1.1"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.6",
     "@types/hapi": "^18.0.11",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
     "chai": "^4.3.8",
