--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "prisma": {
+    "seed": "ts-node src/config/seed.ts"
+  },
   "scripts": {
     "start": "node dist/index.js",
     "dev:tsc": "tsc --watch -p .",
@@ -14,18 +17,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2",
     "@hapi/jwt": "^3.2.0",
     "@prisma/client": "5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mqtt": "^5.0.5",
     "node-schedule": "^2.1.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.6",
     "@types/hapi": "^18.0.11",
     "@types/jsonwebtoken": "^9.0.3",
