--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "@hapi/vision": "^7.0.3",
     "@prisma/client": "5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
@@ -34,10 +36,13 @@
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.6",
     "@types/hapi": "^18.0.11",
+    "@types/hapi__inert": "^5.2.7",
+    "@types/hapi__vision": "^5.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
     "chai": "^4.3.8",
+    "hapi-swagger": "^17.1.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
