--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
+    "@types/node-schedule": "^2.1.1",
     "chai": "^4.3.8",
     "hapi-swagger": "^17.1.0",
     "mocha": "^10.2.0",
