--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mqtt": "^5.0.5",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "hapi-swagger": "^17.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -43,7 +44,6 @@
     "@types/node": "^20.6.3",
     "@types/node-schedule": "^2.1.1",
     "chai": "^4.3.8",
-    "hapi-swagger": "^17.1.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
