--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "hapi-swagger": "^17.1.0",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mqtt": "^5.0.5",
     "node-schedule": "^2.1.1",
-    "hapi-swagger": "^17.1.0"
+    "qs": "^6.11.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -43,6 +44,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
     "@types/node-schedule": "^2.1.1",
+    "@types/qs": "^6.9.8",
     "chai": "^4.3.8",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
