--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "hapi-swagger": "^17.1.0",
     "joi": "^17.10.2",
