--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^7.5.2",
     "mqtt": "^5.0.5",
     "node-schedule": "^2.1.1",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.10",
