--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed": "ts-node src/config/seed.ts"
   },
   "scripts": {
-    "start": "prisma generate && node dist/index.js",
+    "start": "node dist/index.js",
     "dev:tsc": "tsc --watch -p .",
     "dev:serve": "nodemon -e js -w dist dist/index.js",
     "dev": "run-p dev:*",
@@ -22,6 +22,7 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "@hapi/vision": "^7.0.3",
+    "@hokify/agenda": "^6.3.0",
     "@prisma/client": "5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
