fix: Exclude folder data dari compiler typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,6 +109,7 @@
   "exclude": [
     "test",
     "src/config/seed.ts",
-    "src/config/seedMongo.ts"
+    "src/config/seedMongo.ts",
+    "src/data"
   ],
 }
