--- a/fly.toml
+++ b/fly.toml
@@ -15,3 +15,8 @@ primary_region = "sin"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[http_service.concurrency]
+  type = "connections"
+  hard_limit = 200
+  soft_limit = 200
