--- a/fly.toml
+++ b/fly.toml
@@ -5,18 +5,39 @@
 
 app = "iterahero2023"
 primary_region = "sin"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
 
-[build]
+[experimental]
+  auto_rollback = true
 
-[http_service]
+# [build]
+#   builder = "paketobuildpacks/builder:base"
+#   buildpacks = ["gcr.io/paketo-buildpacks/nodejs"]
+
+[[services]]
   internal_port = 3000
-  force_https = true
-  auto_stop_machines = false
+  protocol = "tcp"
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
 
-[http_service.concurrency]
-  type = "connections"
-  hard_limit = 200
-  soft_limit = 200
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 250
+    soft_limit = 200
+
+  [[services.tcp_checks]]
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "1s"
