--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "seed": "ts-node src/config/seed.ts"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "prisma generate && node dist/index.js",
+    "start-prod": "node dist/index.js",
     "dev:tsc": "tsc --watch -p .",
     "dev:serve": "nodemon -e js -w dist dist/index.js",
     "dev": "run-p dev:*",
