--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     ],
     "routes": [
      {
-      "src": "/dist/(.*)",
-      "dest": "index.js"
+      "src": "/(.*)",
+      "dest": "dist/index.js"
      }
     ]
    }
