--- a/fly.toml
+++ b/fly.toml
@@ -5,10 +5,15 @@
 
 app = "iterahero2023"
 primary_region = "sin"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
 
 [[services]]
   protocol = "tcp"
   internal_port = 3000
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
   processes = ["app"]
 
    [[services.ports]]
@@ -29,9 +34,4 @@ primary_region = "sin"
     interval = "15s"
     timeout = "2s"
     grace_period = "1s"
-
-[[vm]]
-  cpu_kind = "shared"
-  cpus = 1
-  memory_mb = 1024
 
