--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for iterahero2023 on 2024-03-05T10:07:34+07:00
+# fly.toml app configuration file generated for iterahero2023 on 2024-05-26T07:18:37+07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -8,16 +8,6 @@ primary_region = 'sin'
 kill_signal = 'SIGINT'
 kill_timeout = '5s'
 
-[build]
-
-[http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
-
 [[services]]
   protocol = 'tcp'
   internal_port = 3000
@@ -26,12 +16,12 @@ kill_timeout = '5s'
   min_machines_running = 0
   processes = ['app']
 
-[[services.ports]]
+  [[services.ports]]
     port = 80
     handlers = ['http']
     force_https = true
 
-[[services.ports]]
+  [[services.ports]]
     port = 443
     handlers = ['tls', 'http']
 
@@ -40,12 +30,10 @@ kill_timeout = '5s'
     hard_limit = 250
     soft_limit = 200
 
-[[services.tcp_checks]]
+  [[services.tcp_checks]]
     interval = '15s'
     timeout = '2s'
     grace_period = '1s'
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  size = 'shared-cpu-1x'
