--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:serve": "nodemon -e js -w dist dist/index.js",
     "dev": "run-p dev:*",
     "test": "set NODE_ENV=test & mocha -r ts-node/register test/**/*.test.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "Raven",
