fix: selenoid -> solenoid

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "dev:tsc": "tsc --watch -p .",
     "dev:serve": "nodemon -e js -w dist dist/index.js",
     "dev": "run-p dev:*",
-    "test": "set NODE_ENV=test & mocha -r ts-node/register test/**/*.test.ts",
-    "postinstall": "npx prisma generate"
+    "test": "set NODE_ENV=test & mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [],
   "author": "Raven",
