--- a/fly.toml
+++ b/fly.toml
@@ -8,12 +8,12 @@ primary_region = 'sin'
 kill_signal = 'SIGINT'
 kill_timeout = '5s'
 
+[experimental]
+  auto_rollback = true
+
 [[services]]
-  protocol = 'tcp'
   internal_port = 3000
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
+  protocol = 'tcp'
   processes = ['app']
 
   [[services.ports]]
@@ -27,13 +27,10 @@ kill_timeout = '5s'
 
   [services.concurrency]
     type = 'connections'
-    hard_limit = 250
-    soft_limit = 200
+    hard_limit = 25
+    soft_limit = 20
 
   [[services.tcp_checks]]
     interval = '15s'
     timeout = '2s'
     grace_period = '1s'
-
-[[vm]]
-  size = 'shared-cpu-1x'
